Fix login and module issues
This patch fixes two problems:

1. Closes #27 CPT jar error by including `--add-modules=java.xml.ws` in the command.
2. Allows user to put password and login for UMLS on command line instead of having to edit the batch file. Also provides a useful message if user forgets to do so.